# sqlite_orm_todo_sample

./: CMakeLists.txt  README.txt
src_v1/: CMakeLists.txt  main.cpp
src_v1/Data/: MetaData.h  Storage.cpp  Storage.h  TodoItem.cpp  TodoItem.h
src_v2/: CMakeLists.txt  TodoItem.h  main.cpp
src_v2/Data/: Storage.cpp  Storage.h
src_v2/Data/V1/: Database.h  MetaData.h  TodoItem.cpp  TodoItem.h
src_v2/Data/V2/: Database.h  MetaDataRecord.h  PersonRecord.h  StatusEnum_sqliteorm_serialize.h  TodoItemRecord.cpp  TodoItemRecord.h
